fixed dependency in package

--- a/app/views/partials/global_nav.ejs
+++ b/app/views/partials/global_nav.ejs
@@ -4,7 +4,7 @@
 	}
 
 	.layout_nav {
-		background:#FFF;
+		background:#EEE;
 		padding: 2em; 
 		border-bottom: 1px solid #DDD;
 	}
@@ -12,7 +12,13 @@
 		text-decoration: none;
 		margin-right: 1em;
 		font-size: 1.15em;
-
+	}
+	a, a:visited, a:hover {
+		color:#F46353;
+		text-decoration: none;
+	}
+	a:hover {
+		text-decoration: underline;
 	}
 	.container {
 		width: 960px;
