--- a/app/views/partials/head.ejs
+++ b/app/views/partials/head.ejs
@@ -4,6 +4,17 @@
     <base href="/">
     <meta charset="UTF-8">
     <title><%= doc_title %></title>
-    <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Bitter:700' rel='stylesheet' type='text/css'>
+    <style>
+    body {
+		font-family: 'Roboto Condensed', sans-serif;
+		font-weight: 400;
+    }
+    h1, h2, h3, h4 {
+		font-family: 'Bitter', serif;
+		font-weight: 700;
+    }
+    <style>
 </head>
