--- a/app/views/pages/card_all.ejs
+++ b/app/views/pages/card_all.ejs
@@ -10,35 +10,14 @@
         <div> Aint got nothing to show ya</div>
         <%  }   %>
         
-        <style>
-        .clearfix:after {
-             visibility: hidden;
-             display: block;
-             font-size: 0;
-             content: " ";
-             clear: both;
-             height: 0;
-             }
-        .clearfix { display: inline-block; }
-        /* start commented backslash hack \*/
-        * html .clearfix { height: 1%; }
-        .clearfix { display: block; }
-        /* close commented backslash hack */
-        .cards {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
-        </style>
 
         <ul class="clearfix cards">
 			<%	for (var i = 0; i < cards.length; i++) {	%>
-				<li style="float:left; width: 25%">
-					<a href="/cards/<%= cards[i]._id %>" style="display:block;">
+				<li>
+					<a href="/cards/<%= cards[i]._id %>">
                         <div><img src="<%= cards[i].image %>" width="200px" height="150px"  /></div>
                         <div><%= cards[i].title %></div>
                     </a>
-                    <br>
                     by: <a href="/<%= cards[i].user.username %>"><%= cards[i].user.username %></a>
 				</li>
 			<%	}	%>
