restructure controllers into app

--- a/app/views/pages/user_single.ejs
+++ b/app/views/pages/user_single.ejs
@@ -19,7 +19,7 @@
         <a href="/<%= user.username %>/orders">Orders</a>
         <hr>
 
-        <h2>Posted Cards</h2>
+        <h2><%= sub_title %></h2>
         <% if(cards.length === 0) { %>
         <div> Aint got nothing to show ya</div>
         <% } %>
