--- a/app/views/pages/card_post.ejs
+++ b/app/views/pages/card_post.ejs
@@ -33,6 +33,8 @@
 
     </div>
 
+    <% include ../partials/footer %>
+
     <script src="jquery/dist/jquery.js"></script>
     <script src="bootstrap/dist/js/bootstrap.js"></script>
 
