--- a/app/views/pages/signin.ejs
+++ b/app/views/pages/signin.ejs
@@ -6,6 +6,7 @@
     <style>
     	fieldset label {display: block;}
     </style>
+    
     <div class="container">
         <h1><%= page_title %></h1>
         <form  accept-charset="UTF-8" method="post">
@@ -25,11 +26,10 @@
 				<input type="password" name="password" id="password" value="" tabindex="2">
 			</fieldset>
 			<br><br>
-			<input class="button" type="submit" value="Sign In" tabindex="3">
+			<input type="submit" value="Sign In" class="btn btn--primary" tabindex="3">
 
 		</form>
     </div>
-
 
 </body>
 </html>
