--- a/app/views/pages/users_all.ejs
+++ b/app/views/pages/users_all.ejs
@@ -22,8 +22,7 @@
 		</ul>
     </div>
 
-    <script src="jquery/dist/jquery.js"></script>
-    <script src="bootstrap/dist/js/bootstrap.js"></script>
+    <% include ../partials/footer %>
 
 </body>
 </html>
