fixed duplicate register email/un bug

--- a/app/views/pages/register.ejs
+++ b/app/views/pages/register.ejs
@@ -22,8 +22,11 @@
 				<label for="password">Password</label>
 				<input type="password" name="password" id="password" value="" tabindex="3" autocorrect="off">
 			</fieldset>
+			
 
-			<input class="button" type="submit" value="Register" tabindex="4">
+			<br><br>
+			
+			<input class="btn btn--primary" type="submit"  value="Register" tabindex="4">
 
 		</form>
     </div>
