--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -1,7 +1,8 @@
 
 <footer class="footerGlobal">
-  <div><span class="blackHover">Proudly Made</span></div>
-  <div><span class="goldHover">In Pittsburgh Pennsylvania</span></div>
+  <div class="goldHover">&copy; Cardinal</div>
+  <div class="blackHover">Proudly Made</div>
+  <div class="goldHover">In Pittsburgh, PA</div>
 </footer>
 
 <style>
