User can add items to cart and delete and edit cards

--- a/app/views/pages/about.ejs
+++ b/app/views/pages/about.ejs
@@ -12,15 +12,9 @@
 
         <p>Thomson Reuters shares are listed on the Toronto and New York Stock Exchanges (symbol: TRI). </p>
 
-        <ul>
-			<li>First up, wearing the Pirates ballcap and too-cool-for-school demeanor, meet <a href="http://twitter.com/fanelli">Jay Fanelli</a>. Jay’s in charge of colors, shapes, and letters. Oh, and if you want to get your shirt onto Cotton Bureau, Jay’s the one you need to convince.</li>
-		 	<li>Second from the left sporting khakis and smouldering intensity is <a href="http://twitter.com/nathanperetic">Nathan Peretic</a>. Nate’s in charge of front-end code, operations, ancient history, rhetoric, and hockey news.</li>
-			<li>Styling the Pixel Heart tee and classic green Onitsuka Tigers, <a href="http://twitter.com/chamby">Matthew Chambers</a> is the final and most important member of the website team. He’s the only one we trust to touch the database, and he goes by many names: Chamby, The Beef, or when he’s feeling fancy, Le Boeuf.</li>
-			<li>Last (for now), the charming <a href="http://twitter.com/saragardinier">Sara Gardinier</a>, Cotton Bureau’s Chief Fulfillment Officer and Customer Service Czar. If you got a problem, yo, Sara’ll solve it.</li>
-		</ul>
 
         <figure>
-        	<img src="https://cottonbureau.com/img/group-2.jpg" alt="Jay, Nate, Matt, and Sara">
+        	<img src="https://scontent-iad3-1.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/542941_10102930241145144_830203166_n.jpg?oh=f055baefb0f6dc68e57fa80d243a2aac&oe=5614D7F3" alt="Founders Barb and Greg">
         </figure>
 
         <p>We combine industry expertise with innovative technology to deliver critical information to leading decision makers in the financial and risk, legal, tax and accounting, intellectual property and science and media markets, powered by the world's most trusted news organization.</p>
