--- a/app/views/pages/signin.ejs
+++ b/app/views/pages/signin.ejs
@@ -15,12 +15,12 @@
 			<br><br> -->
 			
 			<fieldset>
-				<label for="username">Username or Email</label>
+				<label for="username">Username or Email</label><br>
 				<input type="text" name="username" id="username" value="" tabindex="1" autocorrect="off" autocapitalize="off" autofocus="true">
 			</fieldset>
 
 			<fieldset>
-				<label for="password">Password</label>
+				<label for="password">Password</label><br>
 				<input type="password" name="password" id="password" value="" tabindex="2">
 			</fieldset>
 			<br><br>
