--- a/app/views/pages/register.ejs
+++ b/app/views/pages/register.ejs
@@ -8,20 +8,20 @@
         
         <form accept-charset="UTF-8" method="post">
         
-			<fieldset>
+			<div class="formGroup formGroup--stacked">
 				<label for="email">Email</label>
-				<input type="email" name="email" id="email" placeholder="No Spam. Ever." tabindex="1" autocorrect="off" autocapitalize="off" autofocus="true">
-			</fieldset>
+				<input type="email" name="email" id="email" placeholder="No Spam. Ever." tabindex="1" autocorrect="off" autocapitalize="off" autofocus="true" class="input">
+			</div>
 
-			<fieldset>
+			<div class="formGroup formGroup--stacked">
 				<label for="username">Username</label>
-				<input type="username" name="username" id="username" value="" tabindex="2" autocorrect="off" >
-			</fieldset>
+				<input type="username" name="username" id="username" value="" tabindex="2" autocorrect="off" class="input" >
+			</div>
 
-			<fieldset>
+			<div class="formGroup formGroup--stacked">
 				<label for="password">Password</label>
-				<input type="password" name="password" id="password" value="" tabindex="3" autocorrect="off">
-			</fieldset>
+				<input type="password" name="password" id="password" value="" tabindex="3" autocorrect="off" class="input">
+			</div>
 			
 
 			<br><br>
