--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,4 +130,32 @@ img {
     padding: 12px 40px;
     text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
 }
+
+
+.input {
+  min-height: 34px;
+  padding: 7px 8px;
+  font-size: 13px;
+  color: #333;
+  vertical-align: middle;
+  background-color: #FAFAFA;
+  background-repeat: no-repeat;
+  background-position: right 8px center;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  outline: none;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
+  font: 13px/1.4 Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+.input--focus, input:focus {
+  border-color: #51a7e8;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075),0 0 5px rgba(81,167,232,0.5);
+}
+
+.formGroup {
+  margin-bottom: 1em;
+}
+.formGroup--stacked label {
+  display: block;
 }
