persistent session after crash

--- a/app/views/pages/about.ejs
+++ b/app/views/pages/about.ejs
@@ -5,7 +5,7 @@
     
     <div class="container">
         <header>
-        	<h1><%= page_title %></h1>
+        	<h1><%= pageTitle %></h1>
         </header>
         
         <p>We combine industry expertise with innovative technology to deliver critical information to leading decision makers in the financial and risk, legal, tax and accounting, intellectual property and science and media markets, powered by the world's most trusted news organization.</p>
