--- a/app/views/pages/card_single.ejs
+++ b/app/views/pages/card_single.ejs
@@ -6,7 +6,7 @@
 
 
     <div class="container">
-        <h1><%= page_title %></h1>
+        <h1><%= pageTitle %></h1>
         <div>Posted by <a href="/<%=user.username %>"><%= user.username %></a></div>
         
         <div><img src="<%=card.image %>"/></div>
