--- a/app/views/pages/signin.ejs
+++ b/app/views/pages/signin.ejs
@@ -6,8 +6,8 @@
     
     
     <div class="container">
-        <h1><%= page_title %></h1>
-        <form  accept-charset="UTF-8" method="post">
+        <h1><%= pageTitle %></h1>
+        <form accept-charset="UTF-8" method="post">
         	<!-- Sign in with: <br>
         	<a href="/auth/facebook">Facebook</a>
         	<a href="/auth/twitter">Twitter</a>
@@ -25,7 +25,7 @@
 
 			<div class="formGroup formGroup--stacked">
 				<label for="remember">
-					<input type="checkbox" id="remember" checked="checked"> Remember me
+					<input type="checkbox" id="remember" name="remember" value="remember" checked="checked"> Remember me
 				</label>
 			</div>
 
