--- a/app/views/pages/users_all.ejs
+++ b/app/views/pages/users_all.ejs
@@ -4,7 +4,7 @@
     <% include ../partials/global_nav %>
 
     <div class="container">
-        <h1><%= page_title %></h1>
+        <h1><%= pageTitle %></h1>
 
         <% if(users.length == 0) { %>
         <div> Aint got nothing to show ya</div>
