--- a/app/views/pages/card_post.ejs
+++ b/app/views/pages/card_post.ejs
@@ -4,7 +4,7 @@
     <% include ../partials/global_nav %>
 
     <div class="container">
-        <h1><%= page_title %></h1>
+        <h1><%= pageTitle %></h1>
 		<form method="post" action="<%= typeof card=='undefined' ? '/cards/post' : '/cards/'+card._id+'/edit' %>"  enctype="multipart/form-data">
 			
 			<div class="formGroup formGroup--stacked">
