--- a/app/views/pages/register.ejs
+++ b/app/views/pages/register.ejs
@@ -4,7 +4,7 @@
     <% include ../partials/global_nav %>
 
     <div class="container">
-        <h1><%= page_title %></h1>
+        <h1><%= pageTitle %></h1>
         
         <form accept-charset="UTF-8" method="post">
         
