--- a/app/views/pages/user_single.ejs
+++ b/app/views/pages/user_single.ejs
@@ -7,7 +7,7 @@
         
         <div class="clearfix">
             <img src="<%= user.gravatar(120) %>" style="float:left" />
-            <h1><%= page_title %></h1>
+            <h1><%= pageTitle %></h1>
             <p><%= user.email %><p>
             <p><%= user.created %><p>
         </div>
