--- a/app/views/partials/head.ejs
+++ b/app/views/partials/head.ejs
@@ -3,7 +3,7 @@
 <head>
     <base href="/">
     <meta charset="UTF-8">
-    <title><%= doc_title %></title>
+    <title><%= docTitle %></title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Bitter:700' rel='stylesheet' type='text/css'>
