--- a/app/views/partials/global_nav.ejs
+++ b/app/views/partials/global_nav.ejs
@@ -6,7 +6,7 @@
 		        	<a href="/<%= auth_user.username %>/"> 
 			        	<img src="<%= auth_user.gravatar(32)%>">
 		        	</a>
-		        	<a href="/i/cart">
+		        	<a href="/cart">
 		        		Cart 
 						<% if(auth_user.cart.length) { %>
 		        			(<%= auth_user.cart.length %>)
